# RL-LoaclServer

./: .gitignore  LICENSE  README.en.md  README.md  check_env.sh  clean.ps1  docker-compose.yml  docker_dev.sh
AIServer/: CMakeLists.txt  build.sh  run.sh  run_local_train.sh
AIServer/configs/: server_config.yaml
AIServer/main/: main.cpp
AIServer/src/: astar_solver.cpp  astar_solver.h  config_loader.cpp  config_loader.h  logger.h  maze_reward.cpp  maze_reward.h  maze_service.cpp  maze_service.h  onnx_inferencer.cpp  onnx_inferencer.h  session_manager.cpp  session_manager.h
AIServer/src/ai/: astar_solver.cpp  astar_solver.h  maze_reward.cpp  maze_reward.h  onnx_inferencer.cpp  onnx_inferencer.h
AIServer/src/config/: config_loader.cpp
AIServer/src/grpc/: maze_service.cpp  maze_service.h
AIServer/src/log/: logger.h
AIServer/src/session/: session_manager.cpp  session_manager.h
Client/: CMakeLists.txt  build.sh  run.sh
Client/configs/: client_config.yaml
Client/main/: main.cpp
Client/proto/: gen_proto.sh  maze.proto
Client/src/: config_loader.cpp  config_loader.h  grpc_client.cpp  grpc_client.h  logger.h  maze_env.cpp  maze_env.h  tcp_client.h  viz_recorder.cpp  viz_recorder.h  viz_server.cpp  viz_server.h
Client/tools/viz_player/: maze_viz_server.py
Client/viz/frontend/: maze_viz.html
RL-Learner/: requirements.txt  run.sh
RL-Learner/configs/: learner_config.yaml
RL-Learner/main/: __init__.py  train.py
RL-Learner/proto/: __init__.py  gen_proto.sh
RL-Learner/src/: __init__.py  learner_service.py  logger.py  metrics_collector.py  ppo_trainer.py  sample_buffer.py
RL-Learner/src/grpc/: __init__.py  learner_service.py
RL-Learner/src/log/: __init__.py
RL-Learner/src/metrics/: __init__.py  metrics_backend.py  metrics_collector.py
RL-Learner/src/training/: __init__.py  ppo_trainer.py  sample_buffer.py
RL-Learner/tools/dashboard/: metrics_server.py  training_dashboard.html
TrainClient/: CMakeLists.txt  build.sh  run.sh  run_train.sh
TrainClient/configs/: client_config.yaml
TrainClient/main/: main.cpp  train_main.cpp
TrainClient/maps/test/: maze_112273095.json  maze_117436372.json  test_maze.json
TrainClient/proto/: gen_proto.sh  maze.proto
TrainClient/src/: config_loader.cpp  config_loader.h  episode_pool.cpp  episode_pool.h  grpc_client.cpp  grpc_client.h  maze_env.cpp  maze_env.h  tcp_client.cpp  thread_pool.h
TrainClient/src/config/: config_loader.cpp  config_loader.h
TrainClient/src/env/: maze_env.cpp  maze_env.h
TrainClient/src/grpc/: grpc_client.cpp
TrainClient/src/log/: logger.h
TrainClient/src/pool/: episode_pool.cpp  episode_pool.h
TrainClient/src/viz/: viz_recorder.cpp  viz_recorder.h
TrainClient/tools/map_generator/: generate_maze.py  map_config.yaml  maze_preview.html
TrainClient/tools/viz_player/: maze_viz.html  maze_viz_server.py
docker/: Dockerfile.aiserver  Dockerfile.client  Dockerfile.learner
